tests/neg/i18682.check
-- [E006] Not Found Error: tests/neg/i18682.scala:3:8 ------------------------------------------------------------------
3 |val _ = Fop(1)  // error
  |        ^^^
  |        Not found: Fop - did you mean Foo?
  |
  | longer explanation available when compiling with `-explain`
-- [E006] Not Found Error: tests/neg/i18682.scala:4:12 -----------------------------------------------------------------
4 |val _ = new Fooo(2) // error
  |            ^^^^
  |            Not found: type Fooo - did you mean Foo?
  |
  | longer explanation available when compiling with `-explain`
-- [E006] Not Found Error: tests/neg/i18682.scala:6:8 ------------------------------------------------------------------
6 |val _ = hellx // error
  |        ^^^^^
  |        Not found: hellx - did you mean hello?
  |
  | longer explanation available when compiling with `-explain`
-- [E008] Not Found Error: tests/neg/i18682.scala:13:12 ----------------------------------------------------------------
13 |val _ = bar.Bap // error, App does shown as hint, too far away
   |        ^^^^^^^
   |        value Bap is not a member of object Bar
-- [E008] Not Found Error: tests/neg/i18682.scala:14:12 ----------------------------------------------------------------
14 |val _ = bar.Bap() // error
   |        ^^^^^^^
   |        value Bap is not a member of object Bar - did you mean bar.Baz?
-- [E006] Not Found Error: tests/neg/i18682.scala:16:8 -----------------------------------------------------------------
16 |val _ = error // error, java.lang.Error does not show as hint, since it is not a value
   |        ^^^^^
   |        Not found: error
   |
   | longer explanation available when compiling with `-explain`
